[package]
name = "tokiobench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { path = "tokio/tokio", features = ["full"] }
criterion = { git = "https://github.com/IgorErin/criterion.rs", branch = "iea/iter_reuse" }
itertools = "0.13.0"
tokio-metrics = { path = "tokio-metrics", features = ["rt"] }
serde = "1.0.215"
cfg-if = "1.0.0"
futures = "0.3.31"
csv = "1.3.1"
serde_json = "1.0.134"

[lib]
name = "tokiobench"
path = "src/lib.rs"

[[bin]]
name = "mtatlin"
path = "src/monitor/mtatlin.rs"

[[bench]]
name = "tatlin"
harness = false

[[bench]]
name = "steal"
harness = false

[features]
full = []
check = []
dry = []
yield = []
