[package]
name = "tokiobench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio_ref = { git = "https://github.com/IgorErin/tokio", branch = "master", package = "tokio", features = ["full"] }
tokio_groups = { git = "https://github.com/IgorErin/tokio", branch = "iea/group-sharded", package = "tokio", features = ["full"] }
tokio_id = { git = "https://github.com/IgorErin/tokio", branch = "iea/id-sharded", package = "tokio", features = ["full"] }

criterion = { git = "https://github.com/IgorErin/criterion.rs", branch = "iea/iter_reuse" }
itertools = "0.13.0"
serde = "1.0.215"
cfg-if = "1.0.0"
futures = "0.3.31"
csv = "1.3.1"
serde_json = "1.0.134"
lazy_static = "1.5.0"

[profile.release]
debug = true

[lib]
name = "tokiobench"
path = "src/lib.rs"

[[bench]]
name = "multi"
harness = false

[[bench]]
name = "group"
harness = false

[[bench]]
name = "spawner"
harness = false
